src/objects/HotelActivityStatusCode__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hotel Activity Status Codes</relationshipLabel>
        <relationshipName>Hotel_Activity_Status_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Hotel Activity Status Code</label>
    <nameField>
        <displayFormat>HASC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hotel Activity Status Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>